--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,14 @@
     "types": ["jest"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
     "strict": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "outDir": "./build",
     "paths": {
-      "@services/*": ["./src/services/*"],
+      "@src/*": ["./src/*"],
       "@tests/*": ["./tests/*"]
     }
   },
