--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "= 21.7.3"
   },
   "scripts": {
-    "dev": "npx nodemon --config ./nodemon.json --exec 'npm run dev'",
-    "start": "NODE_ENV=production LOG_LEVEL=debug node build/src/server.js",
+    "dev": "npx nodemon --config ./nodemon.json --exec 'node -r @swc-node/register src/server.ts'",
+    "start": "NODE_ENV=production node build/src/server.js",
     "test": "npx jest --runInBand -c ./jest.config.js",
     "test:cov": "npm run test -- --coverage",
     "build": "npx swc ./src -d ./build --config-file ./.swcrc"
@@ -17,12 +17,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc/cli": "^0.6.0",
+    "@swc/core": "^1.10.9",
+    "@swc/jest": "^0.2.37",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "3.4.2",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
     "typescript": "^5.7.3"
   },
   "dependencies": {
