--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@swc-node/register": "^1.10.9",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.9",
     "@swc/jest": "^0.2.37",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "3.4.2",
