--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "npx nodemon --config ./nodemon.json --exec 'node -r @swc-node/register src/server.ts'",
-    "start": "NODE_ENV=production node build/src/server.js",
+    "start": "NODE_ENV=production node build/src/index.js",
     "test": "npx jest --runInBand -c ./jest.config.js",
     "test:cov": "npm run test -- --coverage",
     "build": "npx swc ./src -d ./build --config-file ./.swcrc"
