config(docker): cria dockerfile para desenvolvimento e producao

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,8 @@
 FROM node:21.7.3-alpine3.20
 
+RUN apk update \
+    && apk add git netcat-openbsd iproute2-ss tcpdump curl iputils-ping
+
 USER node
 
 WORKDIR /home/node/app
@@ -10,4 +13,4 @@ RUN npm ci --omit=dev
 
 COPY --chown=node:node ./ ./
 
-CMD ["/usr/local/bin/npm", "start"]
+CMD [ "sleep", "infinity" ]
