--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,11 +8,16 @@ services:
     image: deirofelippe/teste-tecnico-hube:latest
     build:
       context: ./
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     container_name: backend
-    command: sleep infinity
     volumes:
       - './:/home/node/app'
     ports:
       - '3000:3000'
     restart: unless-stopped
+    # healthcheck:
+    #   test: ['CMD', 'curl', '-f', 'http://localhost:3000/healthz']
+    #   interval: 5s
+    #   timeout: 5s
+    #   retries: 10
+    #   start_period: 10s
