--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "npx nodemon --config ./nodemon.json --exec 'node -r @swc-node/register src/server.ts'",
     "start": "NODE_ENV=production node build/src/index.js",
+    "prestart": "rm -rf build/ && npm run build",
     "test": "npx jest --runInBand -c ./jest.config.js",
     "test:cov": "npm run test -- --coverage",
     "build": "npx swc ./src -d ./build --config-file ./.swcrc"
