ci-cd: adiciona step de build

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,3 +30,6 @@ jobs:
 
       - name: Check dependencies for vulnerabilities
         run: npm audit --audit-level=high
+
+      - name: Run build
+        run: npm run build
