--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     image: deirofelippe/teste-tecnico-hube:latest
     build:
       context: ./
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     container_name: backend
     volumes:
       - './:/home/node/app'
